--- a/front/app/globals.css
+++ b/front/app/globals.css
@@ -2,6 +2,10 @@ body {
     overflow-x: overlay;
 }
 
+p {
+    margin: 0;
+}
+
 [class*='gm-style-iw'] {
     /* CSS styles for classes that include "gm-style-iw" */
     /* Example styles: */
@@ -34,54 +38,38 @@ div.gm-style-iw-tc {
     display: none !important;
 }
 
-/*#tooltip::after {
-    content: '';
-    position: absolute;
-    bottom: -10px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 20px;
-    height: 20px;
-    background-color: #f5f5f5;
-    border: 1.5px solid rgb(86, 86, 86);
-    border-top: none;
-    border-left: none;
-    transform: rotate(45deg);
-    z-index: -1;
-}
-#tooltip::after {
-    content: '';
-    position: absolute;
-    bottom: -10px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 20px;
-    height: 20px;
-    background-color: #e8eaf6;
-    border: 1.5px solid #002984;
-    border-top: none;
-    border-left: none;
-    transform: rotate(45deg);
-    margin-left: -10px;
-    z-index: -1;
-}
-#tooltip::after {
-    content: '';
-    position: absolute;
-    bottom: -9px;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 16px;
-    height: 16px;
-    background-color: #f5f5f5;
-    border: 1.5px solid rgb(86, 86, 86);
-    border-top: none;
-    border-left: none;
-    transform: rotate(45deg);
-    z-index: 2;
-}*/
-
-main {
+body {
+    background-color: #212121 !important;
     background-image: url('/houseBanner.png');
     background-repeat: repeat;
 }
+
+.recharts-scatter-symbol {
+    cursor: pointer;
+}
+
+.carrousselNavContainer {
+    position: absolute !important;
+    width: 24px !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+    height: 24px !important;
+    top: calc(50% - 32px) !important;
+    color: rgba(0, 0, 0, 0.54) !important;
+}
+
+@media (hover: hover) {
+    .carrousselNavContainer:hover {
+        color: rgba(0, 0, 0, 0.33) !important;
+    }
+}
+/*
+.MuiTablePagination-selectLabel {
+    display: none !important;
+}
+
+.css-16c50h-MuiInputBase-root-MuiTablePagination-select {
+    display: none !important;
+}
+ */
