--- a/front/app/globals.css
+++ b/front/app/globals.css
@@ -30,7 +30,7 @@ div.gm-style-iw-tc {
 
 body {
     background-color: #212121 !important;
-    background-image: url('/houseBanner.png');
+    background-image: url('/house.png');
     background-repeat: repeat;
 }
 
